# dayone-mcp

./: .gitignore  README.md  pyproject.toml  test_database.py
src/dayone_mcp/: __init__.py  database.py  server.py
tests/: __init__.py  test_all.py  test_database.py  test_date_entries.py  test_full_text.py  test_search.py
